--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@
   },
   "script": [
     "git fetch --unshallow",
-    "mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.login=f3b8179f9f5659ebd4be99410d38f8770f7859c2 -Dsonar.projectKey=SoftServe-Social-Projects_GreenCity -DskipTests=true -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=softserve-social-projects"
+    "mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install -Dtest='greencity.service.impl.*Test' sonar:sonar -Dsonar.login=f3b8179f9f5659ebd4be99410d38f8770f7859c2 -Dsonar.projectKey=SoftServe-Social-Projects_GreenCity -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=softserve-social-projects"
   ],
   ".result": "configured",
   "language": "java"
