--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -50,7 +50,7 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
 # RabbitMQ
-messaging.rabbit.email.topic=send.email.
+messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
