--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -42,3 +42,9 @@ logging.level.greencity.exception.handler.CustomExceptionHandler=${LOG_EXCEPTION
 logging.path=${LOG_PATH}
 logging.file=${LOG_FILE}
 logging.pattern.file=${LOG_PATTERN}
+
+# RabbitMQ
+messaging.rabbit.email.topic=email-topic-exchange
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
