--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -1,15 +1,15 @@
 # Datasource
 spring.datasource.url=${JAWSDB_URL}
-spring.datasource.username=${USER}
-spring.datasource.password=${PASSWORD}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=${DRIVER}
 spring.datasource.hikari.maximumPoolSize=${POOL_SIZE}
 server.port=8080
 
 # Liquibase
 spring.liquibase.url=${JAWSDB_URL}
-spring.liquibase.user=${USER}
-spring.liquibase.password=${PASSWORD}
+spring.liquibase.user=${DATABASE_USER}
+spring.liquibase.password=${DATABASE_PASSWORD}
 spring.liquibase.enabled=${LIQUIBASE_ENABLE}
 spring.liquibase.change-log=${LIQUIBASE_LOG}
 
@@ -52,7 +52,7 @@ spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
 
 # RabbitMQ
-messaging.rabbit.email.topic=email-topic-exchange
+messaging.rabbit.email.topic=${EMAIL_TOPIC}
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
