--- a/core/pom.xml
+++ b/core/pom.xml
@@ -149,6 +149,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>1.105.0</version>
+        </dependency>
     </dependencies>
 
     <build>
