--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,7 @@
         <swagger.version>2.9.2</swagger.version>
         <cloudstorage.version>1.105.0</cloudstorage.version>
         <tngtech.version>1.13.1</tngtech.version>
+        <cloudstorage.version>1.105.0</cloudstorage.version>
     </properties>
 
     <dependencies>
