--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,6 +22,7 @@
         <jackson.version>2.10.1</jackson.version>
         <powermock.version>2.0.4</powermock.version>
         <swagger.version>2.9.2</swagger.version>
+        <cloudstorage.version>1.105.0</cloudstorage.version>
     </properties>
 
     <dependencies>
@@ -122,11 +123,6 @@
             <version>1.30.7</version>
         </dependency>
         <dependency>
-            <groupId>com.cloudinary</groupId>
-            <artifactId>cloudinary-http44</artifactId>
-            <version>1.3.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
@@ -152,7 +148,7 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>1.105.0</version>
+            <version>${cloudstorage.version}</version>
         </dependency>
     </dependencies>
 
