--- a/core/pom.xml
+++ b/core/pom.xml
@@ -23,6 +23,7 @@
         <jackson.version>2.10.1</jackson.version>
         <powermock.version>2.0.4</powermock.version>
         <swagger.version>2.9.2</swagger.version>
+        <tngtech.version>1.13.1</tngtech.version>
     </properties>
 
     <dependencies>
@@ -112,22 +113,10 @@
             <version>3.2.4</version>
             <scope>test</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>org.mockito</groupId>-->
-        <!--            <artifactId>mockito-junit-jupiter</artifactId>-->
-        <!--            <version>3.2.4</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
         <dependency>
             <groupId>com.tngtech.java</groupId>
             <artifactId>junit-dataprovider</artifactId>
-            <version>1.13.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <version>${tngtech.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
