--- a/core/pom.xml
+++ b/core/pom.xml
@@ -165,6 +165,10 @@
             <artifactId>google-cloud-storage</artifactId>
             <version>${cloudstorage.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
