--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,9 @@ name: CI/CD GreenCity
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master, dev, git-action ]
+    branches: [ master, dev, az ]
   pull_request:
-    branches: [ master, dev, git-action ]
+    branches: [ master, dev, az ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
