--- a/chat/src/main/resources/application-dev.properties
+++ b/chat/src/main/resources/application-dev.properties
@@ -17,3 +17,9 @@ logging.level.root=info
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
+
+# Token expiration time
+accessTokenValidTimeInMinutes=120
+refreshTokenValidTimeInMinutes=600
+tokenKey=123123123
+verifyEmailTimeHour=24
