--- a/chat/pom.xml
+++ b/chat/pom.xml
@@ -18,6 +18,13 @@
         <mockito-junit-jupiter.version>3.3.3</mockito-junit-jupiter.version>
         <mockito-core.version>3.3.3</mockito-core.version>
         <postgresql.version>42.2.5</postgresql.version>
+        <thymeleaf-spring5>3.0.11.RELEASE</thymeleaf-spring5>
+        <modelmapper>2.3.5</modelmapper>
+        <sockjs-client>1.0.2</sockjs-client>
+        <stomp-websocket>2.3.3</stomp-websocket>
+        <bootstrap>3.3.7</bootstrap>
+        <jquery>3.1.1-1</jquery>
+        <jjwt>0.9.1</jjwt>
     </properties>
 
     <dependencies>
@@ -25,6 +32,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -56,7 +68,7 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
-            <version>3.0.11.RELEASE</version>
+            <version>${thymeleaf-spring5}</version>
         </dependency>
         <dependency>
             <groupId>javax.persistence</groupId>
@@ -65,7 +77,7 @@
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
-            <version>2.3.5</version>
+            <version>${modelmapper}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -96,27 +108,27 @@
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>sockjs-client</artifactId>
-            <version>1.0.2</version>
+            <version>${sockjs-client}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>stomp-websocket</artifactId>
-            <version>2.3.3</version>
+            <version>${stomp-websocket}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>3.3.7</version>
+            <version>${bootstrap}</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
-            <version>3.1.1-1</version>
+            <version>${jquery}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <version>${jjwt}</version>
         </dependency>
     </dependencies>
 
