--- a/user/src/main/resources/application-dev.properties
+++ b/user/src/main/resources/application-dev.properties
@@ -65,3 +65,6 @@ greencity.time.after.last.activity=300000
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+
+#RestTemplate
+greencity.server.address = http://localhost:8080
