--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
         <sonar.language>java</sonar.language>
+        <checkstyle.skip>true</checkstyle.skip>
     </properties>
 
     <build>
