--- a/chat/src/main/resources/application-dev.properties
+++ b/chat/src/main/resources/application-dev.properties
@@ -23,3 +23,6 @@ accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 tokenKey=123123123
 verifyEmailTimeHour=24
+
+# File folder
+fileFolder = ${ABSOLUTE_PATH}
