--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>core</module>
         <module>service-api</module>
         <module>dao</module>
         <module>service</module>
+        <module>core</module>
     </modules>
 
     <properties>
@@ -61,7 +61,9 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
             </plugin>
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
