--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
-                    <forkCount>0</forkCount>
-                </configuration>
+                <version>2.22.2</version>
             </plugin>
             <plugin>
                 <groupId>net.revelc.code.formatter</groupId>
