--- a/service/pom.xml
+++ b/service/pom.xml
@@ -23,6 +23,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>3.1.6</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>greencity</groupId>
             <artifactId>dao</artifactId>
             <version>${project.version}</version>
