--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -62,3 +62,6 @@ greencityuser.server.address = http://localhost:8060
 #AzureCloudStorage
 azure.connection.string=${AZURE_CONNECTION_STRING}
 azure.container.name=${AZURE_CONTAINER_NAME}
+
+spring.web.resources.chain.cache=false
+
